logic for generating products page added

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
             <div class="section-photo">
               <img loading="lazy" src="./images/dog_1.jpg" alt="sad dog" />
-              <img loading="lazy" src="/images/dog.jpg" alt="dog is eating" />
+              <img loading="lazy" src="./images/dog.jpg" alt="feed a dog" />
             </div>
           </div>
 
@@ -306,12 +306,7 @@
 
             <select id="item-count" name="item-count">
               <option value="8" selected>8</option>
-              <option value="16">16</option>
-              <option value="24">24</option>
-              <option value="32">32</option>
-              <option value="40">40</option>
-              <option value="48">48</option>
-              <option value="50">50</option>
+             
             </select>
 
             <div class="selected-count count-select-js "><span class="count">8</span>
