--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
             <use xlink:href="./icons/symbol-defs.svg#icon-Arthrohard_logo-TOP_vector"></use>
           </svg>
 
-          <h1 class="title-hero">
-            Lab-V Arthrohard Preparat na wsparcie stawów dla psa i kota
+          <h1 class="title-hero gradient-text">
+            Lab-V Arthrohard Preparat <br/> na wsparcie stawów dla psa i kota
 
           </h1>
 
           <p class="description ">
-            Arthrohard to dobrze przyswajalny suplement diety w formie syropu,
+            Arthrohard to dobrze przyswajalny suplement diety w formie syropu, <br/>
             stworzony z myślą o zdrowiu stawów Twojego psa lub kota.
           </p>
           <button type="button" class="btn-base btn-hero">Kup teraz</button>
@@ -82,7 +82,7 @@
       <!-- 2 section dodatki-------------------------------------->
 
       <div class="parent-underlined">
-        <h2 class="title-hero underlined">Co wyróżnia nasz preparat</h2>
+        <h2 class="title-hero underlined gradient-text">Co wyróżnia nasz preparat</h2>
       </div>
 
       <div class="section container">
@@ -313,6 +313,18 @@
 
       </div>
       <ul class="product-list container-products-js container"></ul>
+      <
+
+<!--modal window for peoduct page-->
+
+      <div class="modal">
+        <div class="wrapper-modal">
+          <div class="content"></div>
+          <svg class="icon-crose">
+            <use xlink:href="./icons/symbol-defs.svg#icon-cross"></use>
+          </svg>
+        </div>
+        </div>
     </section>
   </main>
 
