--- a/index.html
+++ b/index.html
@@ -79,7 +79,6 @@
         </div>
       </div>
 
-
       <!-- 2 section dodatki-------------------------------------->
 
       <div class="parent-underlined">
@@ -93,7 +92,6 @@
             <h2 class="subtitle underlined">Innowacyjny dodatek
               - <br /> Czarciego Pazura</h2>
           </div>
-
 
           <p class="description  ">
             Zapewnia dodatkowe wsparcie w zwalczaniu stanów bólowych i
@@ -207,9 +205,7 @@
       </div>
 
       <div class="container">
-
         <!--  icon list        -->
-
         <div class="icon-section">
           <div class="icon-list-js">
           <div class="icon-item">
@@ -225,6 +221,7 @@
               pomagają w odbudowie chrząstki, co jest szczególnie korzystne dla zwierząt ze zmianami zwyrodnieniowymi
               stawów.</p>
           </div>
+
           <div class="icon-item">
             <svg class="icon">
               <use xlink:href="./icons/symbol-defs.svg#icon-grass"></use>
@@ -292,21 +289,15 @@
 
 
     </section>
-
-
     <section id="section3">
       <div class="container">
-
-
         <div class="section-select">
           <span class="label-select">liczba produktów na stronie</span>
           <div class="wrapper">
 
-         <select id="item-count" name="item-count">
-
-            </select>  
-
-            <div class="selected-count count-select-js "><span class="count"></span>
+       
+            <div class="selected-count count-select-js ">
+              <span class="count">50</span>
               <svg width="15" height="9" viewBox="0 0 15 9" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M1 0.75L7.5 7.25L14 0.75" stroke="white" stroke-width="2" />
               </svg>
@@ -319,9 +310,9 @@
 
 
       </div>
-   
+ <div class="container">
       <ul class="product-list container-products-js "></ul>
-   
+</div>
 
 <!--modal window for product page-->
 
